Feat: Improve player experience and UI
- Implement robust player join/leave logic with bot handling.
- Ensure unique colors for all players, including AI.
- Prevent premature elimination of newly joined players.
- Refactor turn advancement for better robustness.
- Redesign UI to show current player's turn at the top.
- Fix horizontal scrollbar issue by adjusting CSS.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   </head>
   <body>
     <main>
+      <div id="turnDisplay"></div>
       <div id="board" class="initial"></div>
-      <ul id="playersSection"></ul>
     </main>
     <script type="module" src="/src/logic.ts"></script>
     <script type="module" src="/src/client.ts"></script>
