feat: Implement futuristic UI and fix color assignment bug

--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
     <title>Ripple Effect</title>
   </head>
   <body>
+    <header>
+      <h1 class="game-title">Ripple Effect</h1>
+    </header>
     <main>
-      <div id="turnDisplay"></div>
+      <div id="turn-indicator-container"></div>
       <div id="board" class="initial"></div>
     </main>
     <script type="module" src="/src/logic.ts"></script>
